--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -1,4 +1,4 @@
-name: gtftk
+name: pygtftk
 
 channels:
     - conda-forge
@@ -15,17 +15,9 @@ dependencies:
     - nose
     - bats
     - bedtools ==2.27.1
-    - r-base ==3.4.1
-    - r-reshape2
-    - r-ggplot2
-    - r-data.table
-    - r-plyr
-    - r-beanplot
-    - r-colorramps
-    - r-amap
     - cloudpickle >=0.4.0
     - ftputil >=3.3.1
-    - pandas >=0.19.2,<0.20 # 0.20 removes the 'replace' attribute for 'pandas._libs.interval.Interval' object.
+    - pandas >=0.23.3
     - pybedtools >=0.7.8
     - pybigwig >=0.2.8
     - pysam >=0.9.1.4
@@ -39,4 +31,5 @@ dependencies:
     - pyparsing >=2.2.0
     - biopython >=1.69
     - zlib <1.2.8-3
-
+    - matplotlib >=2.0.2
+    - plotnine >=0.3.0
