--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -54,6 +54,7 @@ requirements:
     - zlib <1.2.8-3
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
+    - libstdcxx-ng >=7.2.0
 
   run:
     - GitPython >=2.1.8
@@ -81,6 +82,7 @@ requirements:
     - zlib <1.2.8-3
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
+    - libstdcxx-ng >=7.2.0
 
 test:
   commands:
