--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -18,6 +18,7 @@ dependencies:
     - cloudpickle >=0.4.0
     - ftputil >=3.3.1
     - pandas >=0.23.3
+    - scipy >=1.1.0
     - pybedtools >=0.7.8
     - pybigwig >=0.2.8
     - pysam >=0.9.1.4
