--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -39,6 +39,7 @@ requirements:
     - cloudpickle >=0.4.0
     - ftputil >=3.3.1
     - pandas >=0.23.3
+    - scipy >=1.1.0
     - pybedtools >=0.7.8
     - pybigwig >=0.2.8
     - pysam >=0.9.1.4
@@ -67,6 +68,7 @@ requirements:
     - cloudpickle >=0.4.0
     - ftputil >=3.3.1
     - pandas >=0.23.3
+    - scipy >=1.1.0
     - pybedtools >=0.7.8
     - pybigwig >=0.2.8
     - pysam >=0.9.1.4
