--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
+GitPython >=2.1.8
+argparse
+nose
 cloudpickle >=0.4.0
 ftputil >=3.3.1
-numpy >=1.12.1
-pandas >=0.19.2
-pybedtools >=0.7.9
-pyBigWig >=0.3.4
-pysam >=0.10.0
-python-dateutil >=2.6.0
-pytz >=2017.2
-PyYAML >=3.12
+pandas >=0.23.3
+scipy >=1.1.0
+pybedtools >=0.7.8
+pybigwig >=0.2.8
+pysam >=0.9.1.4
+pyyaml >=3.12
+sphinx_bootstrap_theme >=0.4.9
+sphinxcontrib-programoutput >=0.8
+sphinx >=1.5.2
 requests >=2.13.0
-six >=1.10.0
 cffi >=1.10.0
 pyparsing >=2.2.0
 biopython >=1.69
-argparse >= 1.1
-GitPython>=2.1.8
-scipy >=1.0.0
+matplotlib >=2.0.2
+plotnine >=0.4.0
