--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -56,6 +56,7 @@ requirements:
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
     - libstdcxx-ng >=7.2.0
+    - unzip
 
   run:
     - GitPython >=2.1.8
@@ -85,6 +86,7 @@ requirements:
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
     - libstdcxx-ng >=7.2.0
+    - unzip
 
 test:
   commands:
