--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -57,6 +57,7 @@ requirements:
     - plotnine >=0.4.0
     - libstdcxx-ng >=7.2.0
     - unzip
+    - gawk
 
   run:
     - GitPython >=2.1.8
@@ -87,6 +88,7 @@ requirements:
     - plotnine >=0.4.0
     - libstdcxx-ng >=7.2.0
     - unzip
+    - gawk
 
 test:
   commands:
