--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -16,7 +16,7 @@ dependencies:
     - bats
     - bedtools ==2.27.1
     - cloudpickle >=0.4.0
-    - ftputil >=3.3.1
+    - ftputil >=3.3.1,<4.0.0
     - pandas >=0.23.3
     - scipy >=1.1.0
     - pybedtools >=0.7.8
