--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -9,7 +9,7 @@ channels:
 
 dependencies:
     - GitPython >=2.1.8
-    - python >=2.7,<3
+    - python >=3.6
     - pyparsing
     - argparse
     - nose
@@ -34,7 +34,6 @@ dependencies:
     - zlib <1.2.8-3
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
-    - libstdcxx-ng >=7.2.0
     - unzip
     - gawk
  
