--- a/conda/env_py2k.yaml
+++ b/conda/env_py2k.yaml
@@ -8,7 +8,7 @@ channels:
 
 dependencies:
     - GitPython >=2.1.8
-    - python >=3.6
+    - python >=2.7,<3
     - pyparsing
     - argparse
     - bedtools ==2.27.1
@@ -30,3 +30,4 @@ dependencies:
     - plotnine >=0.4.0
     - pip:
       - future
+      - sphinxcontrib-programoutput
