Slight modifications of setup.py and setup.cfg to try to make them Pypi compatible.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [metadata]
-description-file = README.md
-license_file = LICENSE
+name = pygtftk
+version = 0.9.3
+author = D. Puthier and F. Lopez
+author-email = denis.puthier@univ-amu.fr
 
 [egg_info]
 tag_build =
 tag_date = 0
+
+[bdist_wheel]
