--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -17,7 +17,6 @@ dependencies:
     - pandas >=0.23.3
     - scipy >=1.1.0
     - pybedtools >=0.7.8
-    - pybigwig >=0.3.10
     - pysam >=0.9.1.4
     - pyyaml >=3.12
     - gcc >=4.8.5
@@ -30,4 +29,5 @@ dependencies:
     - plotnine >=0.4.0
     - pip:
       - future
+      - pyBigWig >=0.3.12
 
