--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - plotnine >=0.4.0
     - pip:
       - future
+      - pyBigWig >=0.3.12
 
   run:
     - GitPython >=2.1.8
@@ -58,6 +59,7 @@ requirements:
     - plotnine >=0.4.0
     - pip:
       - future
+      - pyBigWig >=0.3.12
 
 test:
   commands:
