added future to conda

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -34,6 +34,7 @@ requirements:
     - pip:
       - future
       - pyBigWig >=0.3.12
+      - future
 
   run:
     - GitPython >=2.1.8
@@ -60,6 +61,7 @@ requirements:
     - pip:
       - future
       - pyBigWig >=0.3.12
+      - future
 
 test:
   commands:
