--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ biopython >=1.69
 matplotlib >=2.0.2
 plotnine >=0.4.0
 GitPython >=2.1.8
-argparse
-nose
 cloudpickle >=0.4.0
 ftputil >=3.3.1
 pandas >=0.23.3
-pybigwig >=0.3.10
+pybigwig >=0.3.12
+setuptools
+argparse
