matplotlib 3.0 won't support p2k

--- a/conda/env_py2k.yaml
+++ b/conda/env_py2k.yaml
@@ -25,7 +25,7 @@ dependencies:
     - pyparsing >=2.2.0
     - biopython >=1.69
     - zlib >=1.2.11
-    - matplotlib >=2.0.2
+    - matplotlib >=2.0.2,<3
     - plotnine >=0.4.0
     - pip:
       - future
