--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ requests >=2.13.0
 cffi >=1.10.0
 pyparsing >=2.2.0
 biopython >=1.69
-matplotlib >=2.0.2
+matplotlib >=2.0.2,<3
 plotnine >=0.4.0
 GitPython >=2.1.8
 cloudpickle >=0.4.0
