--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -25,5 +25,6 @@ dependencies:
     - matplotlib >=2.0.2
     - plotnine >=0.4.0
     - pyBigWig >=0.3.12
+    - libcurl >=7.61.0
     - pip:
       - future
