--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -8,6 +8,7 @@ channels:
 
 dependencies:
     - GitPython >=2.1.8
+    - cython >=v0.28.5
     - pyparsing
     - argparse
     - bedtools ==2.27.1
