setup_py_install: false

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,8 +7,8 @@ conda:
 requirements_file: requirements_readthedoc.txt
 
 python:
-   setup_py_install: true
    pip_install: true
+   setup_py_install: false
    extra_requirements:
       - tests
       - docs
