--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,7 +7,7 @@ conda:
 requirements_file: requirements_readthedoc.txt
 
 python:
-   pip_install: true
+   pip_install: false
    setup_py_install: false
    extra_requirements:
       - tests
