--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -8,6 +8,10 @@ channels:
 
 dependencies:
     - GitPython >=2.1.8
+    - sphinx_bootstrap_theme >=0.4.9
+    - sphinxcontrib-programoutput >=0.8
+    - sphinx >=1.5.2
+    - nose
     - python ==3.5
     - cython >=v0.28.5
     - pyparsing
