--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -9,11 +9,10 @@ channels:
 dependencies:
     - bedtools ==2.27.1
     - python ==3.5
-    - libcurl
     - pyBigWig >=0.3.12
     - pybedtools >=0.7.8
     - sphinx_bootstrap_theme >=0.4.9
     - sphinxcontrib-programoutput >=0.8
-    - sphinx >=1.5.2
-    - nose
     - pyproj
+    - pyyaml
+    - pygtftk
