Fixed image path in presentation

--- a/docs/manual/Makefile
+++ b/docs/manual/Makefile
@@ -40,7 +40,8 @@ html:
 	@cd source ; for i in *.rst; do perl -npe 's/^\:shell\:/\t:shell:/' $$i > $$i.tmp; done
 	@cd source ; for i in *.tmp; do n=`echo $$i | sed 's/.tmp//'`; mv $$i $$n;done 
 	@mkdir -p source/_static
-	@$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html; cp source/*png $(BUILDDIR)/html
+	@$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	@#cp source/*png $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
