--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -17,6 +17,7 @@ dependencies:
     - pandas >=0.23.3
     - scipy >=1.1.0
     - pybedtools >=0.7.8
+    - nose
     - pyyaml >=3.12
     - gcc >=4.8.5
     - requests >=2.13.0
