--- a/requirements_developers.txt
+++ b/requirements_developers.txt
@@ -9,8 +9,8 @@ requests >=2.13.0
 cffi >=1.10.0
 pyparsing >=2.2.0
 biopython >=1.69
-matplotlib >=2.0.2,<3
-plotnine >=0.4.0
+matplotlib >=3.0.0
+plotnine >=0.5.1
 GitPython >=2.1.8
 cloudpickle >=0.4.0
 ftputil >=3.3.1
