--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -6,7 +6,7 @@ channels:
   - defaults
 
 dependencies:
-  - python >=3.5,<3.7  
+  - python >=3.5,<3.7
   - GitPython >=2.1.8
   - python >=3.6
   - pyparsing
@@ -30,4 +30,4 @@ dependencies:
   - plotnine >=0.4.0
   - pyBigWig >=0.3.12
   - future
-
+  - cython
