Still struggling with readthedoc (conda-forge/label/cf201901)

--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -1,7 +1,7 @@
 name: pygtftk
 
 channels:
-    - conda-forge/label/gcc7
+    - conda-forge/label/cf201901
     - conda-forge
     - defaults
     - bioconda
