--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,28 @@
 language: python
 python:
- - "3.6"
+- "3.6"
 install:
- - sudo apt-get update
- - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-    wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+- sudo apt-get update
+- if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
   else
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   fi
- - bash miniconda.sh -b -p $HOME/miniconda
- - export PATH="$HOME/miniconda/bin:$PATH"
- - hash -r
- - conda config --set always_yes yes --set changeps1 no
- - conda update -q conda
- - conda info -a
- - conda env create -n pygtftk_py3k -f conda/env.yaml python=$TRAVIS_PYTHON_VERSION
- - source activate pygtftk_py3k
- - make install
- - gtftk -h
+- bash miniconda.sh -b -p $HOME/miniconda
+- export PATH="$HOME/miniconda/bin:$PATH"
+- hash -r
+- conda config --set always_yes yes --set changeps1 no
+- conda update -q conda
+- conda info -a
+- conda env create -n pygtftk_py3k -f conda/env.yaml python=$TRAVIS_PYTHON_VERSION
+- source activate pygtftk_py3k
+- rm -rf ~/.gtftk
+- python setup.py install
+- gtftk -h
 script:
- - make test_para_travis -j 2
- - make nose_travis
+- make test_para_travis -j 2
+- make nose_travis
 
 branches:
- only:
- - master
+  only:
+  - master
