--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 - bash miniconda.sh -b -p $HOME/miniconda
 - export PATH="$HOME/miniconda/bin:$PATH"
 - hash -r
+- sudo apt install build-essential 
 - conda config --set always_yes yes --set changeps1 no
 - conda update -q conda
 - conda info -a
