pip_install: true

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,10 +4,10 @@ build:
 conda:
    file: conda/env.yaml
     
-requirements_file: requirements_readthedoc.txt
+requirements_file: requirements.txt
 
 python:
-   pip_install: false
+   pip_install: true
    use_system_site_packages: false
    version: 3.5
    setup_py_install: true
