pip_install: false

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,7 +7,7 @@ conda:
 requirements_file: requirements.txt
 
 python:
-   pip_install: true
+   pip_install: false
    use_system_site_packages: false
    version: 3.5
    setup_py_install: true
