no comment about rtfd...

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,14 +4,10 @@ build:
 conda:
    file: conda/env.yaml
     
-requirements_file: requirements.txt
+requirements_file: requirements_readthedoc.txt
 
 python:
    pip_install: false
-   use_system_site_packages: false
    version: 3.5
-   setup_py_install: true
-   extra_requirements:
-      - tests
-      - docs
+   setup_py_install: false
 formats: []
