--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,12 +1,16 @@
 build:
     image: 2.0
+  
 conda:
-  file: conda/env_rtfd.yaml
-requirements_file: requirements.txt
+   file: conda/env_read_the_doc.yaml
+    
+requirements_file: requirements_readthedoc.txt
+
 python:
-  pip_install: false
-  version: 3.5
-  setup_py_install: true
-  extra_requirements:
-    - dev
+   pip_install: false
+   version: 3.5
+   setup_py_install: true
+   extra_requirements:
+      - tests
+      - docs
 formats: []
