--- a/conda/env_read_the_doc.yaml
+++ b/conda/env_read_the_doc.yaml
@@ -1,7 +1,7 @@
 name: pygtftk
 
 channels:
-    - conda-forge
+#    - conda-forge
     - defaults
     - bioconda
     - auto
@@ -13,7 +13,7 @@ dependencies:
     - pybedtools >=0.7.8
     - sphinx_bootstrap_theme >=0.4.9
     - sphinxcontrib-programoutput >=0.8
-    - pyproj
+ #   - pyproj
     - pyyaml
     - nose
     - numpy >=1.10.0
