--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - conda config --set always_yes yes --set changeps1 no
 - conda update -q conda
 - conda info -a
-- conda env create -n pygtftk_py3k -f env_travis.yaml python=$TRAVIS_PYTHON_VERSION
+- conda env create -n pygtftk_py3k -f conda/env_travis.yaml python=$TRAVIS_PYTHON_VERSION
 - source activate pygtftk_py3k
 - rm -rf ~/.gtftk
 - python setup.py install
