--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pygtftk
-version = 1.1.4
-author = D. Puthier and F. Lopez
+version = 1.1.5
+author = D. Puthier, F. Lopez and Q. Ferré
 author-email = denis.puthier@univ-amu.fr
 
 [egg_info]
