--- a/conda/env_travis.yaml
+++ b/conda/env_travis.yaml
@@ -6,7 +6,7 @@ channels:
 - defaults
 
 dependencies:
-- python >=3.6
+- python >=3.8,<3.9
 - GitPython >=2.1.8
 - pyparsing
 - bedtools >=2.27.1
@@ -16,6 +16,7 @@ dependencies:
 - pandas >=0.23.3,!=1.0.0,!=1.0.0rc0
 - pybedtools >=0.7.8
 - bats
+- nose
 - pyyaml >=3.12
 - requests >=2.13.0
 - cffi >=1.10.0
