--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = pygtftk
 version = 1.2.8
-author = D. Puthier and F. Lopez
+author = D. Puthier, F. Lopez and Q. Ferré
 author-email = denis.puthier@univ-amu.fr
 
 [options]
-python_requires = >=3.6,<3.9
+python_requires = >=3.8,<3.9
 
 [egg_info]
 tag_build =
