--- a/conda/env_travis.yaml
+++ b/conda/env_travis.yaml
@@ -11,24 +11,26 @@ dependencies:
 - pyparsing
 - bedtools >=2.27.1
 - cloudpickle >=0.4.0
-- ftputil >=3.3.1,<4.0.0
-- scipy >=1.2.0
-- pandas >=0.23.3,!=1.0.0,!=1.0.0rc0
-- pybedtools >=0.7.8
+- ftputil >= 4.0.0
+- scipy >=1.5.2
+- pandas >= 1.1.2
+- pybedtools >=0.8.1
 - bats
+- graphviz
 - nose
 - pyyaml >=3.12
-- requests >=2.13.0
+- requests >=2.23.0
 - cffi >=1.10.0
 - pyparsing >=2.2.0
-- biopython >=1.69
+- biopython >=1.78
 - zlib >=1.2.11
-- matplotlib >=2.0.2
-- plotnine >=0.4.0
-- pyBigWig >=0.3.12
-- numpy >=1.15.3
-- cython >=0.29.6
+- matplotlib >=3.3.1
+- plotnine >= 0.7.1
+- pyBigWig >=0.3.17
+- numpy >=1.19.1
+- cython >=0.29.21
 - mpmath >=1.1.0
 - scikit-learn >=0.24
 - python-graphviz
 - seaborn
+- setuptools
