Removed accent from my name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pygtftk
 version = 1.2.8
-author = D. Puthier, F. Lopez and Q. Ferré
+author = D. Puthier, F. Lopez and Q. Ferre
 author-email = denis.puthier@univ-amu.fr
 
 [options]
