Fix docker image for pypi

--- a/manylinux/Dockerfile
+++ b/manylinux/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/pypa/manylinux1_x86_64
+FROM pypywheels/manylinux2010-pypy_x86_64
 LABEL maintainer "dputhier <denis.puthier@univ-amu.fr>"
 COPY ./install.sh /
 RUN bash /install.sh
