--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,9 @@ scipy >= 1.5.2
 seaborn
 setuptools
 billiard >=3.6.4.0
+dash >=2.3.1
+dash-bootstrap-components >=1.1.0
+dash-core-components >=2.0.0
+dash-defer-js-import >=0.0.2
+dash-html-components >=2.0.0
+dash-table >=5.0.0
